--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "faunadb": "^4.6.0",
     "next": "12.1.6",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
@@ -18,8 +19,8 @@
     "stripe": "^9.5.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.35",
     "@types/next-auth": "^3.15.0",
+    "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
